fix: incorrect pagination when overflow
